6.50  Sun Mar 22 12:28:06 PDT 2009
    Windows    
    * Remove the special checks for compilers that need a "manifest".  Instead,
      the code will just be a no-op if there's no manifest.  Or something.
      I dunno, I'm hoping Jan and Steve know what they're doing.
      [rt.perl.org 61492]


6.49_01  Thu Feb 19 17:06:36 PST 2009
    New OS Support
    * Recognize "Haiku", a resurrection of BeOS.

    New Features
    - META.yml now includes ExtUtils::MakeMaker in build_requires by
      default.

    Test Fixes
    - ExtUtils::Install 1.51 changed its output breaking some tests that
      were looking for /^Writing/ [rt.cpan.org 42927]

    Bug Fixes
    - Upgrade bundled modules:  ExtUtils::Install 1.52, ExtUtils::Command
      1.16, ExtUtils::Manifest 1.56.

    Other
    - The MakeMaker repository moved slightly.  Changed the metadata to
      reflect this.  [rt.cpan.org 41571]


6.48  Mon Oct 20 11:18:13 PDT 2008
    Test Fixes
    * Protect against stray environment variables effecting the tests.
      [rt.cpan.org 14930]


6.47_02  Thu Oct 16 16:14:20 PDT 2008
    Test Fixes
    * MIN_PERL_VERSION test had some goofs on VMS. [thanks Craig Berry]


6.47_01  Tue Oct 14 12:38:05 EDT 2008
    New Features
    * Added optional parameter MIN_PERL_VERSION, to define minimal
      required perl version for dependency checks and to pass on to
      META.yml and ppd files.        [rt.cpan.org 28374]
      Thanks to David Golden, Alexandr Ciornii (chorny) and Martin Becker

    Bug Fixes
    * Guard against a path to Perl with a space in it.
      From Max Maischein.  [bleadperl@32905]  

    Test Fixes
    - Small fix for VOS from Paul Green [bleadperl@33259]

    Other
    * $ExtUtils::MakeMaker::Revision, $ExtUtils::MM_Unix::Revision and 
      $ExtUtils::MM_VMS::Revision are all now based on $VERSION.  You
      shouldn't be using them for anything anyway.


6.46  Sat Sep 27 17:34:03 EDT 2008
    Bug Fixes